dt-bindings: vendor-prefixes: Add youritech
Document the Youritech vendor prefix.

Signed-off-by: Daniel Ammann <daniel.ammann@bytesatwork.ch>

--- a/Documentation/devicetree/bindings/vendor-prefixes.yaml
+++ b/Documentation/devicetree/bindings/vendor-prefixes.yaml
@@ -1220,6 +1220,8 @@ patternProperties:
     description: YSH & ATIL
   "^yones-toptech,.*":
     description: Yones Toptech Co., Ltd.
+  "^youritech,.*":
+    description: Youritech
   "^ysoft,.*":
     description: Y Soft Corporation a.s.
   "^zealz,.*":
