--- a/drivers/video/logo/Kconfig
+++ b/drivers/video/logo/Kconfig
@@ -68,4 +68,8 @@ config LOGO_SUPERH_CLUT224
 	depends on SUPERH
 	default y
 
+config LOGO_BAW_CLUT224
+	bool "224-color BAW Linux logo"
+	default y
+
 endif # LOGO
