--- a/arch/arm64/configs/bytedevkit_am62x_defconfig
+++ b/arch/arm64/configs/bytedevkit_am62x_defconfig
@@ -587,7 +587,7 @@ CONFIG_DRM=y
 CONFIG_DRM_I2C_NXP_TDA998X=y
 CONFIG_DRM_MALI_DISPLAY=m
 CONFIG_DRM_RCAR_DW_HDMI=m
-CONFIG_DRM_PANEL_LVDS=m
+CONFIG_DRM_PANEL_LVDS=y
 CONFIG_DRM_PANEL_SIMPLE=y
 CONFIG_DRM_PANEL_OSD_OSD101T2587_53TS=y
 CONFIG_DRM_PANEL_RAYDIUM_RM67191=m
@@ -621,6 +621,7 @@ CONFIG_FRAMEBUFFER_CONSOLE=y
 CONFIG_LOGO=y
 # CONFIG_LOGO_LINUX_MONO is not set
 # CONFIG_LOGO_LINUX_VGA16 is not set
+# CONFIG_LOGO_LINUX_CLUT224 is not set
 CONFIG_SOUND=y
 CONFIG_SND=y
 # CONFIG_SND_SPI is not set
