--- a/arch/arm64/boot/dts/ti/k3-am625-bytedevkit.dts
+++ b/arch/arm64/boot/dts/ti/k3-am625-bytedevkit.dts
@@ -65,8 +65,8 @@
 
 	main_i2c1_pins_default: main-i2c1-pins-default {
 		pinctrl-single,pins = <
-			AM62X_IOPAD(0x1e8, PIN_INPUT_PULLUP, 0) /* (B17) I2C1_SCL */
-			AM62X_IOPAD(0x1ec, PIN_INPUT_PULLUP, 0) /* (A17) I2C1_SDA */
+			AM62X_IOPAD(0x1e8, PIN_INPUT, 0) /* (B17) I2C1_SCL */
+			AM62X_IOPAD(0x1ec, PIN_INPUT, 0) /* (A17) I2C1_SDA */
 		>;
 	};
 
@@ -150,6 +150,13 @@
 			AM62X_IOPAD(0x174, PIN_OUTPUT, 7) /* (AD21) GPIO0_91 Display2 enable */
 		>;
 	};
+
+	touch_pins_default: touch-pins-default {
+		pinctrl-single,pins = <
+			AM62X_IOPAD(0x1d0, PIN_OUTPUT, 7) /* (A15) GPIO1_22 UART0_CTSN Touch Rst */
+			AM62X_IOPAD(0x1d4, PIN_INPUT, 7) /* (B15) GPIO1_23 UART0_RTSN Touch Int */
+		>;
+	};
 };
 
 &main_uart0 {
@@ -227,5 +234,22 @@
 		oldi_out0: endpoint {
 			remote-endpoint = <&lcd_in0>;
 		};
+	};
+};
+
+&main_i2c1 {
+	pinctrl-names = "default";
+	pinctrl-0 = <&main_i2c1_pins_default
+		     &touch_pins_default>;
+	clock-frequency = <400000>;
+	status = "okay";
+
+	gt911@5d {
+		compatible = "goodix,gt911";
+		reg = <0x5d>;
+		interrupt-parent = <&main_gpio1>;
+		interrupts = <23 0>;
+		irq-gpios = <&main_gpio1 23 0>;
+		reset-gpios = <&main_gpio1 22 0>;
 	};
 };
