--- a/Documentation/devicetree/bindings/display/panel/panel-simple.yaml
+++ b/Documentation/devicetree/bindings/display/panel/panel-simple.yaml
@@ -347,6 +347,8 @@ properties:
       - winstar,wf35ltiacd
         # Yes Optoelectronics YTC700TLAG-05-201C 7" TFT LCD panel
       - yes-optoelectronics,ytc700tlag-05-201c
+        # Youritech ET050WV05 5" WVGA (800x480) TFT LCD panel
+      - youritech,et050WV05
 
   backlight: true
   ddc-i2c-bus: true
