--- a/arch/arm64/configs/bytedevkit_am62x_defconfig
+++ b/arch/arm64/configs/bytedevkit_am62x_defconfig
@@ -423,6 +423,7 @@ CONFIG_VITESSE_PHY=y
 CONFIG_MDIO_GPIO=y
 CONFIG_MDIO_BUS_MUX_MULTIPLEXER=y
 CONFIG_MDIO_BUS_MUX_MMIOREG=y
+CONFIG_USB_NET_DRIVERS=m
 CONFIG_USB_PEGASUS=m
 CONFIG_USB_RTL8150=m
 CONFIG_USB_RTL8152=m
@@ -638,25 +639,28 @@ CONFIG_SND_SOC_WSA881X=m
 CONFIG_SND_SIMPLE_CARD=m
 CONFIG_SND_AUDIO_GRAPH_CARD=m
 CONFIG_HID_MULTITOUCH=m
+CONFIG_USB_HID=m
 CONFIG_I2C_HID=m
-CONFIG_USB_CONN_GPIO=m
-CONFIG_USB=m
+CONFIG_USB_CONN_GPIO=y
+CONFIG_USB=y
 CONFIG_USB_ANNOUNCE_NEW_DEVICES=y
 CONFIG_USB_OTG=y
-CONFIG_USB_XHCI_HCD=m
-CONFIG_USB_EHCI_HCD=m
-CONFIG_USB_EHCI_HCD_PLATFORM=m
-CONFIG_USB_OHCI_HCD=m
-CONFIG_USB_OHCI_HCD_PLATFORM=m
+CONFIG_USB_OTG_FSM=y
+CONFIG_USB_XHCI_HCD=y
+CONFIG_USB_EHCI_HCD=y
+CONFIG_USB_EHCI_HCD_PLATFORM=y
+CONFIG_USB_OHCI_HCD=y
+CONFIG_USB_OHCI_HCD_PLATFORM=y
 CONFIG_USB_ACM=m
-CONFIG_USB_STORAGE=m
-CONFIG_USB_CDNS3=m
+CONFIG_USB_STORAGE=y
+CONFIG_USB_CDNS3=y
 CONFIG_USB_CDNS3_GADGET=y
 CONFIG_USB_CDNS3_HOST=y
-CONFIG_USB_MUSB_HDRC=m
-CONFIG_USB_DWC3=m
+CONFIG_USB_MUSB_HDRC=y
+CONFIG_USB_DWC3=y
+CONFIG_USB_DWC2=y
 CONFIG_USB_ISP1760=m
-CONFIG_USB_SERIAL=m
+CONFIG_USB_SERIAL=y
 CONFIG_USB_SERIAL_CP210X=m
 CONFIG_USB_SERIAL_FTDI_SIO=m
 CONFIG_USB_SERIAL_PL2303=m
@@ -664,9 +668,9 @@ CONFIG_USB_SERIAL_OPTION=m
 CONFIG_USB_TEST=m
 CONFIG_USB_HSIC_USB3503=m
 CONFIG_NOP_USB_XCEIV=m
-CONFIG_USB_GADGET=m
+CONFIG_USB_GADGET=y
 CONFIG_USB_GADGET_STORAGE_NUM_BUFFERS=32
-CONFIG_USB_CONFIGFS=m
+CONFIG_USB_CONFIGFS=y
 CONFIG_USB_CONFIGFS_SERIAL=y
 CONFIG_USB_CONFIGFS_ACM=y
 CONFIG_USB_CONFIGFS_OBEX=y
@@ -694,7 +698,7 @@ CONFIG_USB_FUNCTIONFS_ETH=y
 CONFIG_USB_FUNCTIONFS_RNDIS=y
 CONFIG_USB_FUNCTIONFS_GENERIC=y
 CONFIG_USB_MASS_STORAGE=m
-CONFIG_USB_G_SERIAL=m
+CONFIG_USB_G_SERIAL=y
 CONFIG_USB_MIDI_GADGET=m
 CONFIG_USB_G_PRINTER=m
 CONFIG_USB_CDC_COMPOSITE=m
@@ -800,9 +804,10 @@ CONFIG_SOUNDWIRE_QCOM=m
 CONFIG_TI_SCI_PM_DOMAINS=y
 CONFIG_TI_PRUSS=m
 CONFIG_TI_PAT=y
+CONFIG_EXTCON_GPIO=y
 CONFIG_EXTCON_PALMAS=m
 CONFIG_EXTCON_PTN5150=m
-CONFIG_EXTCON_USB_GPIO=m
+CONFIG_EXTCON_USB_GPIO=y
 CONFIG_EXTCON_USBC_CROS_EC=y
 CONFIG_MEMORY=y
 CONFIG_OMAP_GPMC=y
