arm64: ti: k3-am625-bytedevkit: support eeprom
Add support for EEPROM.

Signed-off-by: Rico Ganahl <rico.ganahl@bytesatwork.ch>

--- a/arch/arm64/boot/dts/ti/k3-am625-bytedevkit.dts
+++ b/arch/arm64/boot/dts/ti/k3-am625-bytedevkit.dts
@@ -254,4 +254,9 @@
 		irq-gpios = <&main_gpio1 23 0>;
 		reset-gpios = <&main_gpio1 22 0>;
 	};
+
+	eeprom: eeprom@57 {
+		compatible = "atmel,24c256";
+		reg = <0x57>;
+	};
 };
